--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div>
 
     <h2>The Alchemist</h2>
-    <img src="./images/518qiLwlQ0L._SX427_BO1,204,203,200_.jpg" alt="">
+    <img src="./images/518qiLwlQ0L._SX427_BO1,204,203,200_.jpg" alt="the alchemist image">
 
     <h3>Paulo Coelho</h3>
     <p>The Alchemist is a novel by Brazilian author Paulo Coelho which was first published in
